fix permgen memory problem for nightly build